tests/src/snapshots/fe_compiler_tests__compile_errors__indexed_event.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---


MoreThanThreeIndexedParams on line 2
event MyEvent:
        idx addr1: address
        idx addr2: address
        idx addr3: address
        idx addr4: address
