tests/src/snapshots/fe_compiler_tests__compile_errors__invalid_block_field.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: Not a block field
  ┌─ fixtures/compile_errors/invalid_block_field.fe:4:11
  │
4 │     block.foo
  │           ^^^
  │
  = Note: Only `coinbase`, `difficulty`, `number` and `timestamp` can be accessed on `block`.


