tests/src/snapshots/fe_compiler_tests__compile_errors__invalid_string_field.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: No field `does_not_exist` exists on type String<0>
  ┌─ fixtures/compile_errors/invalid_string_field.fe:4:8
  │
4 │     "".does_not_exist
  │        ^^^^^^^^^^^^^^ unknown field


