tests/src/snapshots/fe_compiler_tests__compile_errors__mismatch_return_type.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: expected function to return `address` but was `u256`
  ┌─ fixtures/compile_errors/mismatch_return_type.fe:4:9
  │
4 │         return 1
  │         ^^^^^^^^


