tests/src/snapshots/fe_compiler_tests__compile_errors__non_bool_or.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: binary op `or` operands must have type `bool`
  ┌─ [snippet]:5:12
  │
5 │   x = x or y
  │            ^ this has type `u256`; expected `bool`


