tests/src/snapshots/fe_compiler_tests__compile_errors__overflow_i128_neg.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: literal out of range for `i128`
  ┌─ [snippet]:3:8
  │
3 │   i128(-170141183460469231731687303715884105729)
  │        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ does not fit into type `i128`


